--- a/telegram-pusher/cfg/dev.ini
+++ b/telegram-pusher/cfg/dev.ini
@@ -1,5 +1,5 @@
 [queue]
-queueServer=queueServer
+queueServer=queue-server
 queuePort=5672
 messagesQueueName=super
 errorsQueueName=bad
@@ -8,7 +8,7 @@ errorsQueueName=bad
 protocol=http
 port=1080
 botKey=adfaadf
-host=mockServer
+host=mock-server
 
 [database]
 host=mysql-server
