Logs into a separate file (#27)
* Try to run in docker

* Bug #21, Fix func tests

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -51,6 +51,8 @@ services:
     build: ../telegram-pusher
     command: python run.py -d /cfg -e dev
     restart: on-failure
+    volumes:
+      - "./logs:/src/logs"
     links:
       - queue-server
       - mysql-server
