--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,5 @@ install:
         - pip install -r telegram-pusher/requirements.txt
 script:
         - PYTHONPATH=./shared python -m unittest discover command-acceptor/tests -p *tests.py -s command-acceptor
-        - python -m unittest discover command-processor/tests -p *tests.py -s command-processor
+        - PYTHONPATH=./shared python -m unittest discover command-processor/tests -p *Tests.py -s command-processor
         - PYTHONPATH=./shared python -m unittest discover telegram-pusher/tests -p *Tests.py -s telegram-pusher
