--- a/command-acceptor/configuration/dev.ini
+++ b/command-acceptor/configuration/dev.ini
@@ -7,5 +7,6 @@ use_reloader = True
 
 [queue]
 host = localhost
-port = 1082
-queue = telegramQueue
+port = 5672
+processorQueueName=processor
+errorsQueueName=bad
