--- a/cmp_command_processor/cfg/dev.ini
+++ b/cmp_command_processor/cfg/dev.ini
@@ -1,17 +1,10 @@
-[queue]
+[input-queue]
+server=queue-server
+port=5672
+queueName=super
+
+[pusher-queue]
 queueServer=queue-server
 queuePort=5672
-messagesQueueName=super
-errorsQueueName=bad
+messagesQueueName=puper
 
-[telegram]
-protocol=http
-port=1080
-botKey=adfaadf
-host=mock-server
-
-[database]
-host=mysql-server
-name=badmessages
-user=test
-password=test
